--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
 			<version>4.13.2</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.3.12.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
