--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,35 +1,44 @@
-# 配置 服务器端口，访问路径，表示当前项目 在 community下 ServerProperties
+# \u914D\u7F6E \u670D\u52A1\u5668\u7AEF\u53E3\uFF0C\u8BBF\u95EE\u8DEF\u5F84\uFF0C\u8868\u793A\u5F53\u524D\u9879\u76EE \u5728 community\u4E0B ServerProperties
 server.port=8080
 server.servlet.context-path=/community
 
 # ThymeleafProperties
-# 关闭主题的模板的缓存，防止，更改后还是从缓存中加载之前的老版本内容
+# \u5173\u95ED\u4E3B\u9898\u7684\u6A21\u677F\u7684\u7F13\u5B58\uFF0C\u9632\u6B62\uFF0C\u66F4\u6539\u540E\u8FD8\u662F\u4ECE\u7F13\u5B58\u4E2D\u52A0\u8F7D\u4E4B\u524D\u7684\u8001\u7248\u672C\u5185\u5BB9
 spring.thymeleaf.cache=false
 
-# DataSourceProperties 数据库以及连接池（数据源，统一管理连接的工厂，复用连接）
-#数据库驱动
+# DataSourceProperties \u6570\u636E\u5E93\u4EE5\u53CA\u8FDE\u63A5\u6C60\uFF08\u6570\u636E\u6E90\uFF0C\u7EDF\u4E00\u7BA1\u7406\u8FDE\u63A5\u7684\u5DE5\u5382\uFF0C\u590D\u7528\u8FDE\u63A5\uFF09
+#\u6570\u636E\u5E93\u9A71\u52A8
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
 spring.datasource.username=root
 spring.datasource.password=nihao
 
-# 连接池的类，这个性能最好的内置连接池
+# \u8FDE\u63A5\u6C60\u7684\u7C7B\uFF0C\u8FD9\u4E2A\u6027\u80FD\u6700\u597D\u7684\u5185\u7F6E\u8FDE\u63A5\u6C60
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.maximum-pool-size=15
 spring.datasource.hikari.minimum-idle=5
-# 回收关闭等待超时时间
+# \u56DE\u6536\u5173\u95ED\u7B49\u5F85\u8D85\u65F6\u65F6\u95F4
 spring.datasource.hikari.idle-timeout=30000
 
 # MybatisProperties
-# mapper编译完成后后在Test的class下，路径就是classpath：***
+# mapper\u7F16\u8BD1\u5B8C\u6210\u540E\u540E\u5728Test\u7684class\u4E0B\uFF0C\u8DEF\u5F84\u5C31\u662Fclasspath\uFF1A***
 mybatis.mapper-locations=classpath:mapper/*.xml
-# 指定实体类的包名，之后用实体类就不用写路径直接用名即可
+# \u6307\u5B9A\u5B9E\u4F53\u7C7B\u7684\u5305\u540D\uFF0C\u4E4B\u540E\u7528\u5B9E\u4F53\u7C7B\u5C31\u4E0D\u7528\u5199\u8DEF\u5F84\u76F4\u63A5\u7528\u540D\u5373\u53EF
 mybatis.type-aliases-package=com.nowcoder.community.entity
-# 插入用户名字时候自生长主键
+# \u63D2\u5165\u7528\u6237\u540D\u5B57\u65F6\u5019\u81EA\u751F\u957F\u4E3B\u952E
 mybatis.configuration.useGeneratedKeys=true
-# 将驼峰式命名 与 下划线的命名匹配 MySQL对大小写不敏感，用的下划线的方式命名，Java严格区分大小写，用的小驼峰式的命名方式
+# \u5C06\u9A7C\u5CF0\u5F0F\u547D\u540D \u4E0E \u4E0B\u5212\u7EBF\u7684\u547D\u540D\u5339\u914D MySQL\u5BF9\u5927\u5C0F\u5199\u4E0D\u654F\u611F\uFF0C\u7528\u7684\u4E0B\u5212\u7EBF\u7684\u65B9\u5F0F\u547D\u540D\uFF0CJava\u4E25\u683C\u533A\u5206\u5927\u5C0F\u5199\uFF0C\u7528\u7684\u5C0F\u9A7C\u5CF0\u5F0F\u7684\u547D\u540D\u65B9\u5F0F
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
-## 将整个程序的日志调整为debug级别，返回更详细的内容
+## \u5C06\u6574\u4E2A\u7A0B\u5E8F\u7684\u65E5\u5FD7\u8C03\u6574\u4E3Adebug\u7EA7\u522B\uFF0C\u8FD4\u56DE\u66F4\u8BE6\u7EC6\u7684\u5185\u5BB9
 #logging.level.com.nowcoder.community=debug
 #logging.file.name=E:/shiyan/Java/Cache/nowcoder/community.log
+
+# MailProperties \u90AE\u7BB1\u914D\u7F6E
+spring.mail.host=smtp.qq.com
+# port: 465 / 587
+spring.mail.port=465
+spring.mail.username=community.4616@foxmail.com
+spring.mail.password=ovqvqjifmwlacbef
+spring.mail.protocol=smtps
+spring.mail.properties.mail.stmp.ssl.enable=true
