--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,18 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 			<version>2.3.12.RELEASE</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.12.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.github.ulisesbocchio/jasypt-spring-boot-starter -->
+		<dependency>
+			<groupId>com.github.ulisesbocchio</groupId>
+			<artifactId>jasypt-spring-boot-starter</artifactId>
+			<version> 3.0.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
