--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # \u914D\u7F6E \u670D\u52A1\u5668\u7AEF\u53E3\uFF0C\u8BBF\u95EE\u8DEF\u5F84\uFF0C\u8868\u793A\u5F53\u524D\u9879\u76EE \u5728 community\u4E0B ServerProperties
-server.port=8080
+server.port=8090
 server.servlet.context-path=/community
 
 # ThymeleafProperties
@@ -9,9 +9,15 @@ spring.thymeleaf.cache=false
 # DataSourceProperties \u6570\u636E\u5E93\u4EE5\u53CA\u8FDE\u63A5\u6C60\uFF08\u6570\u636E\u6E90\uFF0C\u7EDF\u4E00\u7BA1\u7406\u8FDE\u63A5\u7684\u5DE5\u5382\uFF0C\u590D\u7528\u8FDE\u63A5\uFF09
 #\u6570\u636E\u5E93\u9A71\u52A8
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
-spring.datasource.username=root
-spring.datasource.password=nihao
+# spring.datasource.url=jdbc:mysql://localhost:7036/community?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
+spring.datasource.url=jdbc:mysql://localhost:7036/community?characterEncoding=utf-8&serverTimezone=Hongkong
+# #################################################################
+# # \u4F7F\u7528\u52A0\u5BC6\u7684\u5BC6\u7801 salt_123 \u52A0\u5BC6\u7684\u76D0 2.1.2\u4EE5\u4E0A\u7684\u7248\u672C\u9700\u8981\u5236\u5B9A\u914D\u7F6E \u52A0\u5BC6\u7B56\u7565 # #
+jasypt.encryptor.password=salt@123
+jasypt.encryptor.algorithm=PBEWithMD5AndDES
+jasypt.encryptor.iv-generator-classname=org.jasypt.iv.NoIvGenerator
+spring.datasource.username=ENC(33H8kSvDgzuDIT3J5gmLXA==)
+spring.datasource.password=ENC(6TVBfsom1ZMbXq9aL8popm5+IIRBUwD0)
 
 # \u8FDE\u63A5\u6C60\u7684\u7C7B\uFF0C\u8FD9\u4E2A\u6027\u80FD\u6700\u597D\u7684\u5185\u7F6E\u8FDE\u63A5\u6C60
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
@@ -30,9 +36,9 @@ mybatis.configuration.useGeneratedKeys=true
 # \u5C06\u9A7C\u5CF0\u5F0F\u547D\u540D \u4E0E \u4E0B\u5212\u7EBF\u7684\u547D\u540D\u5339\u914D MySQL\u5BF9\u5927\u5C0F\u5199\u4E0D\u654F\u611F\uFF0C\u7528\u7684\u4E0B\u5212\u7EBF\u7684\u65B9\u5F0F\u547D\u540D\uFF0CJava\u4E25\u683C\u533A\u5206\u5927\u5C0F\u5199\uFF0C\u7528\u7684\u5C0F\u9A7C\u5CF0\u5F0F\u7684\u547D\u540D\u65B9\u5F0F
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
-## \u5C06\u6574\u4E2A\u7A0B\u5E8F\u7684\u65E5\u5FD7\u8C03\u6574\u4E3Adebug\u7EA7\u522B\uFF0C\u8FD4\u56DE\u66F4\u8BE6\u7EC6\u7684\u5185\u5BB9
+## \u5C06\u6574\u4E2A\u7A0B\u5E8F\u7684\u65E5\u5FD7\u8C03\u6574\u4E3Adebug\u7EA7\u522B\uFF0C\u8FD4\u56DE\u66F4\u8BE6\u7EC6\u7684\u5185\u5BB9  # \u8FD9\u4E0D\u80FD\u5206\u522B\u8BBE\u7F6E\u65E5\u5FD7\u6587\u4EF6\u4FDD\u5B58\uFF0C\u4EE5\u53CA\u9650\u5236\u6587\u4EF6\u5927\u5C0F\u3002  \u5728 logback-spring.xml \u8FDB\u884C\u8BE6\u7EC6\u8BBE\u8BA1
 #logging.level.com.nowcoder.community=debug
-#logging.file.name=E:/shiyan/Java/Cache/nowcoder/community.log
+#logging.file.name=E:/work/Java/Cache/nowcoder/community.log
 
 # MailProperties \u90AE\u7BB1\u914D\u7F6E
 spring.mail.host=smtp.qq.com
@@ -42,3 +48,6 @@ spring.mail.username=community.4616@foxmail.com
 spring.mail.password=ovqvqjifmwlacbef
 spring.mail.protocol=smtps
 spring.mail.properties.mail.stmp.ssl.enable=true
+
+# community \u5B9A\u4E49\u81EA\u5DF1\u7684\u7F51\u5740\u8DEF\u5F84\uFF0C\u53D1\u90AE\u4EF6\u6CE8\u518C\u767B\u5F55\uFF0C\u8FD9\u91CC\u7528\u4E0D\u5408\u9002\uFF0C\u5E94\u8BE5\u83B7\u53D6\u5F53\u524D\u670D\u52A1\u5668IP\u5730\u5740\u53D1\u9001
+community.path.domain=http://localhost:
