--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,13 @@
 			<artifactId>jasypt-spring-boot-starter</artifactId>
 			<version> 3.0.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.github.penggle/kaptcha -->
+		<dependency>
+			<groupId>com.github.penggle</groupId>
+			<artifactId>kaptcha</artifactId>
+			<version>2.3.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
