--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,5 +50,7 @@ spring.mail.protocol=smtps
 spring.mail.properties.mail.stmp.ssl.enable=true
 
 # community \u5B9A\u4E49\u81EA\u5DF1\u7684\u7F51\u5740\u8DEF\u5F84\uFF0C\u53D1\u90AE\u4EF6\u6CE8\u518C\u767B\u5F55\uFF0C\u8FD9\u91CC\u7528\u4E0D\u5408\u9002\uFF0C\u5E94\u8BE5\u83B7\u53D6\u5F53\u524D\u670D\u52A1\u5668IP\u5730\u5740\u53D1\u9001
-community.path.domain=http://localhost:
-# community.path.domain=http://43.142.91.235:
+# community.path.domain=http://localhost:
+community.path.domain=http://43.142.91.235:
+# \u4E0A\u4F20\u6587\u4EF6\u5B58\u653E\u7684\u4F4D\u7F6E,\u5F53\u524D\u9879\u76EE\u6839\u76EE\u5F55\u4E0B bak/resource/uploadFile \u76EE\u5F55
+community.path.upload=resource/uploadFile
