--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ spring.datasource.hikari.idle-timeout=30000
 mybatis.mapper-locations=classpath:mapper/*.xml
 # \u6307\u5B9A\u5B9E\u4F53\u7C7B\u7684\u5305\u540D\uFF0C\u4E4B\u540E\u7528\u5B9E\u4F53\u7C7B\u5C31\u4E0D\u7528\u5199\u8DEF\u5F84\u76F4\u63A5\u7528\u540D\u5373\u53EF
 mybatis.type-aliases-package=com.nowcoder.community.entity
-# \u63D2\u5165\u7528\u6237\u540D\u5B57\u65F6\u5019\u81EA\u751F\u957F\u4E3B\u952E
+# \u63D2\u5165\u7528\u6237\u540D\u5B57\u65F6\u5019\u81EA\u751F\u957F\u4E3B\u952E  \u53EF\u4EE5\u76F4\u63A5\u5728 xml \u6587\u4EF6\u4E2D\u914D\u7F6E useGeneratedKeys="true" keyProperty="id"  \u5176\u4E2Did \u5BF9\u5E94\u81EA\u589E\u7684 Java \u5BF9\u8C61\u5C5E\u6027\u540D
 mybatis.configuration.useGeneratedKeys=true
 # \u5C06\u9A7C\u5CF0\u5F0F\u547D\u540D \u4E0E \u4E0B\u5212\u7EBF\u7684\u547D\u540D\u5339\u914D MySQL\u5BF9\u5927\u5C0F\u5199\u4E0D\u654F\u611F\uFF0C\u7528\u7684\u4E0B\u5212\u7EBF\u7684\u65B9\u5F0F\u547D\u540D\uFF0CJava\u4E25\u683C\u533A\u5206\u5927\u5C0F\u5199\uFF0C\u7528\u7684\u5C0F\u9A7C\u5CF0\u5F0F\u7684\u547D\u540D\u65B9\u5F0F
 mybatis.configuration.mapUnderscoreToCamelCase=true
