--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
 			<artifactId>fastjson</artifactId>
 			<version>2.0.12</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
