--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,3 +54,8 @@ community.path.domain=http://localhost:
 #community.path.domain=http://43.142.91.235:
 # \u4E0A\u4F20\u6587\u4EF6\u5B58\u653E\u7684\u4F4D\u7F6E,\u5F53\u524D\u9879\u76EE\u6839\u76EE\u5F55\u4E0B resource/uploadFile \u76EE\u5F55
 community.path.upload=resource/uploadFile
+
+# RedisProperties.class
+Spring.redis.database=11
+spring.redis.host=localhost
+spring.redis.port=6379
